--- a/doc/bericht.lyx
+++ b/doc/bericht.lyx
@@ -315,7 +315,8 @@ Vorgehen
 \begin_layout Standard
 Die Aufgabenstellung bestand darin für eine Shared Memory Multi-Core Architektur
  ein geeignetes Sortierverfahren zu wählen und zu implementieren.
- Dabei soll ein unsortiertes Array (Abbildung 
+ Dabei soll ein unsortiertes Array (Abb.
+ 
 \begin_inset CommandInset ref
 LatexCommand ref
 reference "fig:Original-Array"
@@ -325,7 +326,8 @@ reference "fig:Original-Array"
 ) in Abschnitte unterteilt und parallel auf konventionelle Methode sortiert
  werden.
  Zum Schluss führt der Algorithmus die sortierten Abschnitte wieder zu einem
- Array zusammen (Abbildung 
+ Array zusammen (Abb.
+ 
 \begin_inset CommandInset ref
 LatexCommand ref
 reference "fig:Aufteilen-in-Abschnitte"
@@ -337,7 +339,7 @@ reference "fig:Aufteilen-in-Abschnitte"
 
 \begin_layout Standard
 \begin_inset Float figure
-placement b
+placement H
 wide false
 sideways false
 status open
@@ -379,7 +381,7 @@ name "fig:Original-Array"
 
 \begin_layout Standard
 \begin_inset Float figure
-placement b
+placement H
 wide false
 sideways false
 status open
@@ -421,7 +423,8 @@ name "fig:Aufteilen-in-Abschnitte"
 
 \begin_layout Standard
 Bei einer Original Array-Länge von 12 und vier Threads resultiert eine Abschnitt
--Länge von 3 (Gleichung 
+-Länge von 3 (Gl.
+ 
 \begin_inset CommandInset ref
 LatexCommand ref
 reference "eq:abschnitt"
@@ -453,15 +456,89 @@ Resultate
 \end_layout
 
 \begin_layout Standard
-Der Speedup bei 2 Cores beträgt 177%, was angesichts des Mergen kein Schlechter
- Wert ist.
- Wir erhalten somit eine Effizienz von 88%.
+Der Speedup bei 2 Cores beträgt 177% (Gl.
+ 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "eq:abschnitt-1"
+
+\end_inset
+
+), was angesichts des Mergen kein Schlechter Wert ist.
+ Wir erhalten somit eine Effizienz von 88% (Gl.
+ 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "eq:abschnitt-1-3"
+
+\end_inset
+
+).
 \end_layout
 
 \begin_layout Standard
 Bei einem Dualcore mit Hyperthreading mit 4 Threads erreichen wir einen
- Speedup von 268%, und erreichen somit nur noch eine Effizienz von 67%,
- jedoch liegt das auch noch am Hyperthreading.
+ Speedup von 230% (Gl.
+ 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "eq:abschnitt-1-2"
+
+\end_inset
+
+), und erreichen somit nur noch eine Effizienz von 57% (Gl.
+ 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "eq:abschnitt-1-4"
+
+\end_inset
+
+), jedoch liegt das auch noch am Hyperthreading.
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\begin{equation}
+S(2)=\frac{1.24}{0.70}=177\%\label{eq:abschnitt-1}
+\end{equation}
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\begin{equation}
+S(4)=\frac{2.25}{0.98}=230\%\label{eq:abschnitt-1-2}
+\end{equation}
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\begin{equation}
+E(2)=\frac{1.24}{2\cdot0.70}=88\%\label{eq:abschnitt-1-3}
+\end{equation}
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\begin{equation}
+E(4)=\frac{2.25}{4\cdot0.98}=57\%\label{eq:abschnitt-1-4}
+\end{equation}
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Section
